# motion_capture_tracking

./: .gitmodules  CMakeLists.txt  README.md  package.xml
.github/workflows/: ROS.yml
config/: cfg.yaml  rviz.rviz
launch/: launch.py  mocap_helper.launch  node.launch  rviz.rviz
motion_capture_tracking/: CHANGELOG.rst  CMakeLists.txt  package.xml
motion_capture_tracking/config/: cfg.yaml
motion_capture_tracking/data/: test
motion_capture_tracking/src/: motion_capture_tracking_node.cpp
motion_capture_tracking_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
motion_capture_tracking_interfaces/msg/: NamedPoseArray.msg
src/: motion_capture_tracking_node.cpp
