<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_capture_tracking</name>
  <version>1.0.3</version>
  <description>ROS Package for different motion capture systems, including custom rigid body tracking support</description>
  <maintainer email="hoenig@tu-berlin.de">Wolfgang Hönig</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>libpcl-all-dev</depend>
  <depend>motion_capture_tracking_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
